--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://florydb.c3k8aom4geub.ap-northeast-2.rds.amazonaws.com:3306
+    url: jdbc:mysql://florydb.c3k8aom4geub.ap-northeast-2.rds.amazonaws.com:3306/flory
     username: root
     password: noonsong2
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,5 +15,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
-          auto: update
+          auto: create
         default_batch_fetch_size: 1000
