--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-HELP.md
+# Gradle
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### STS ###
+# STS
 .apt_generated
 .classpath
 .factorypath
@@ -17,7 +17,7 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-### IntelliJ IDEA ###
+# IntelliJ IDEA
 .idea
 *.iws
 *.iml
@@ -25,15 +25,17 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/java/flory/FloryServer/config/FirebaseConfig.java
-src/main/java/flory/resources/flory-backend-firebase-adminsdk-jwlfw-1d814b9a79.json
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
+# VS Code
 .vscode/
+
+# Ignore specific files
+src/main/java/flory/FloryServer/config/FirebaseConfig.java
+src/main/java/flory/resources/flory-backend-firebase-adminsdk-jwlfw-1d814b9a79.json
